Generate "xor reg, reg" if optimizing for size

PR target/60863
	* config/i386/i386.c (ix86_expand_clear): Remove outdated
	comment.  Check optimize_insn_for_size_p instead of
	optimize_insn_for_speed_p.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@209488 138bc75d-0d04-0410-961f-82ee72b054a4